<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/numberText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/showButton"
            android:hint="@string/enter_a_number_bettwen_0_and_100"
            android:inputType="number"
            android:text=""/>

        <Button
            android:id="@+id/showButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/show" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressbar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        style="@android:style/Widget.ProgressBar.Horizontal"/>

    <ProgressBar
        android:id="@+id/progressbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:indeterminate="true"
        style="@android:style/Widget.ProgressBar.Large"/>

    <ProgressBar
        android:id="@+id/progressbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:indeterminate="true"
        style="@android:style/Widget.ProgressBar.Small"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/back"
            android:layout_weight="1"
            android:text="@string/volver"/>
        <Button
            android:layout_width="match_parent"
            android:id="@+id/next"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/siguiente"/>
    </LinearLayout>
</LinearLayout>